Update RWD styles

--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -121,6 +121,11 @@
         }
       }
     }
+    @include phone {
+      &.row {
+        margin: 0;
+      }
+    }
   }
 
   @include tablet-landscape-sm {
