--- a/styles/style.css
+++ b/styles/style.css
@@ -415,6 +415,12 @@ body {
   color: #292d2e;
 }
 
+@media only screen and (max-width: 450px) {
+  body {
+    font-size: 1.3rem;
+  }
+}
+
 .wrapper {
   max-width: 1200px;
   width: 70%;
@@ -782,6 +788,10 @@ body {
   display: none;
 }
 
+.btn__menu:hover {
+  background-color: #556373;
+}
+
 .btn__resume {
   position: relative;
   display: -webkit-box;
@@ -799,27 +809,38 @@ body {
   z-index: 100;
 }
 
-@media only screen and (max-width: 650px) {
-  .btn__resume.col-6 {
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    max-width: 50%;
-  }
+.btn__resume:hover {
+  background-color: #556373;
 }
 
-@media only screen and (max-width: 450px) {
-  .btn__resume.col-6 {
-    -ms-flex-preferred-size: 60%;
-        flex-basis: 60%;
-    max-width: 60%;
-  }
+.btn__resume.col-6 {
+  -ms-flex-preferred-size: 180px;
+      flex-basis: 180px;
+  max-width: 180px;
 }
 
 .btn__send {
+  font-size: 1.4rem;
+  letter-spacing: 1px;
   margin: 40px 0;
   background-color: #ffffff;
   color: #000000;
   width: 33.333%;
+  -webkit-transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  transition: all 250ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  text-transform: uppercase;
+}
+
+.btn__send:hover {
+  background-color: #00a496;
+  color: #ffffff;
+}
+
+@media only screen and (max-width: 450px) {
+  .btn__send {
+    width: 50%;
+    margin: 40px 0 20px;
+  }
 }
 
 .btn__contact, .btn__about {
@@ -852,6 +873,12 @@ body {
 @media only screen and (max-width: 790px) {
   .btn__contact, .btn__about {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .btn {
+    height: 35px;
   }
 }
 
@@ -1058,7 +1085,6 @@ body {
 }
 
 .about__intro p {
-  font-size: 1.5rem;
   line-height: 1.4;
 }
 
@@ -1093,7 +1119,7 @@ body {
 
 @media only screen and (max-width: 650px) {
   .about__skills__list .col-2 .fa-universal-access {
-    font-size: 8rem;
+    font-size: 5.5rem;
   }
 }
 
@@ -1145,6 +1171,12 @@ body {
   margin-bottom: 10px;
 }
 
+@media only screen and (max-width: 650px) {
+  .about h3 {
+    margin-bottom: 30px;
+  }
+}
+
 .about__personal {
   color: rgba(255, 255, 255, 0.7);
   padding: 40px;
@@ -1176,15 +1208,6 @@ body {
           align-items: center;
 }
 
-@media only screen and (max-width: 1200px) {
-  .about__personal .courses__list .courses__item.row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-
 @media only screen and (max-width: 650px) {
   .about__personal .courses__list .courses__item.row {
     -webkit-box-align: start;
@@ -1199,15 +1222,13 @@ body {
 
 @media only screen and (max-width: 1200px) {
   .about__personal .courses__list .courses__item .col-10 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    max-width: calc(100% - 40px);
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
+    max-width: calc(80% - 40px);
   }
   .about__personal .courses__list .courses__item .col-2 {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
-    max-width: 100%;
-    margin-bottom: 10px;
   }
 }
 
@@ -1217,9 +1238,16 @@ body {
   }
 }
 
+@media only screen and (max-width: 450px) {
+  .about__personal .courses__list {
+    font-size: 1.3rem;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
   .about__personal {
-    padding: 30px;
+    padding: 20px;
+    font-size: 1.3rem;
   }
 }
 
@@ -1390,9 +1418,14 @@ body {
   margin: 0;
 }
 
+@media only screen and (max-width: 968px) {
+  .portfolio .section-title {
+    margin-top: 50px;
+  }
+}
+
 .portfolio__description {
   margin: 20px 0;
-  font-size: 1.4rem;
 }
 
 .portfolio__list .col-4 {
@@ -1412,7 +1445,8 @@ body {
   .portfolio__list .col-4 {
     -ms-flex-preferred-size: 70%;
         flex-basis: 70%;
-    max-width: calc(70% - 40px);
+    max-width: calc(70% - 20px);
+    margin: 10px;
   }
 }
 
@@ -1448,12 +1482,31 @@ body {
   margin-right: 5px;
 }
 
+@media only screen and (max-width: 450px) {
+  .portfolio__list .image__container .overlay__title i {
+    display: none;
+  }
+}
+
 .portfolio__list .image__container .overlay__title h3 {
   display: inline-block;
   margin-top: -3px;
   vertical-align: middle;
   font-weight: normal;
   font-size: 1.5rem;
+}
+
+@media only screen and (max-width: 450px) {
+  .portfolio__list .image__container .overlay__title h3 {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .portfolio__list .image__container .overlay__title {
+    margin-bottom: 0;
+    text-transform: uppercase;
+  }
 }
 
 .portfolio__list .image__container .overlay__list {
@@ -1464,6 +1517,19 @@ body {
 
 .portfolio__list .image__container .overlay__list .col-1 {
   margin: 10px 20px;
+}
+
+@media only screen and (max-width: 450px) {
+  .portfolio__list .image__container .overlay__list .col-1 {
+    margin: 10px 15px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .portfolio__list .image__container .overlay {
+    padding: 15px;
+    height: 25%;
+  }
 }
 
 .portfolio__list .image__container:hover .overlay {
@@ -1512,6 +1578,12 @@ body {
   }
   .portfolio__list.row .col-4:last-child {
     margin-right: 40px;
+  }
+}
+
+@media only screen and (max-width: 968px) {
+  .portfolio__list {
+    margin-bottom: 50px;
   }
 }
 
@@ -1570,6 +1642,13 @@ body {
 .form input::placeholder,
 .form textarea::placeholder {
   color: #ffffff;
+}
+
+@media only screen and (max-width: 450px) {
+  .form input,
+  .form textarea {
+    text-transform: uppercase;
+  }
 }
 
 .form textarea {
@@ -1660,6 +1739,13 @@ body {
   margin-bottom: 50px;
 }
 
+@media only screen and (max-width: 450px) {
+  .footer h2 {
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+  }
+}
+
 .footer__item {
   margin-bottom: 20px;
 }
@@ -1708,7 +1794,7 @@ body {
 
 @media only screen and (max-width: 790px) {
   .footer {
-    padding: 40px 8%;
+    padding: 40px 6%;
     position: relative;
     width: 100%;
     -webkit-transform: none;
