--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -5,6 +5,10 @@
 
   &.flex--start {
     justify-content: flex-start;
+
+    @include tablet-landscape-xs {
+      justify-content: center;
+    }
   }
 
   h1 {
