--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -53,7 +53,7 @@
     text-transform: uppercase;
 
     &:hover {
-      background-color: #00a496;
+      background-color: lightcoral;
       color: $main-light;
     }
 
