--- a/styles/sass/components/_portfolio.scss
+++ b/styles/sass/components/_portfolio.scss
@@ -13,6 +13,10 @@
     @include tablet-landscape-sm {
       margin-top: 50px;
     }
+
+    @include phone {
+      margin-top: 10px;
+    }
   }
 
   &__description {
