--- a/styles/style.css
+++ b/styles/style.css
@@ -1441,6 +1441,12 @@ body {
   }
 }
 
+@media only screen and (max-width: 450px) {
+  .portfolio .section-title {
+    margin-top: 10px;
+  }
+}
+
 .portfolio__description {
   margin: 20px 0;
 }
