Update input border property

--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -8,7 +8,7 @@
   input,
   textarea {
     background-color: unset;
-    border: unset;
+    border: transparent;
     color: $main-light;
     padding: 15px 0;
     width: 100%;
