Update text of success message + line-height

--- a/styles/sass/components/_form.scss
+++ b/styles/sass/components/_form.scss
@@ -38,6 +38,8 @@
     padding: 20px;
     border-radius: 10px;
     background-color: #0303033d;
+    text-align: left;
+    line-height: 1.4;
   }
 
   @include tablet-landscape-xs {
