--- a/styles/style.css
+++ b/styles/style.css
@@ -1696,6 +1696,8 @@ body {
   padding: 20px;
   border-radius: 10px;
   background-color: #0303033d;
+  text-align: left;
+  line-height: 1.4;
 }
 
 @media only screen and (max-width: 790px) {
