--- a/styles/style.css
+++ b/styles/style.css
@@ -1682,6 +1682,7 @@ body {
 @media only screen and (max-width: 450px) {
   .form input,
   .form textarea {
+    padding: 20px 0;
     font-size: 1.5rem;
   }
 }
