Update z-index, remove redundant styles

--- a/styles/sass/components/_about.scss
+++ b/styles/sass/components/_about.scss
@@ -225,6 +225,8 @@
   }
 
   @include phone {
+    overflow: hidden;
+    padding-top: 50px;
     &__intro {
       .row {
         flex-direction: column;
