Update submit button styles

--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -52,7 +52,7 @@
     text-transform: uppercase;
 
     &:hover {
-      background-color: lightcoral;
+      background-color: rgb(85, 99, 115);
       color: $main-light;
     }
 
