--- a/styles/sass/base/_base-index.scss
+++ b/styles/sass/base/_base-index.scss
@@ -1,4 +1,5 @@
 @import "normalizer";
-@import "mixins-variables";
+@import "variables";
+@import "mixins";
 @import "general";
 @import "typography";
