--- a/styles/sass/components/_buttons.scss
+++ b/styles/sass/components/_buttons.scss
@@ -8,6 +8,9 @@
   cursor: pointer;
 
   &__menu {
+    position: relative;
+    background-color: $accent-primary;
+    color: $main-light;
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -15,10 +18,6 @@
 
     &.hide {
       display: none;
-    }
-
-    &:hover {
-      background-color: rgb(85, 99, 115);
     }
   }
 
