--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -80,8 +80,8 @@
     &__dropdown {
       display: block;
       position: absolute;
-      width: 100%;
-      left: -10px;
+      width: 70%;
+      right: -10px;
       top: -10px;
       max-width: calc(100% - 20px);
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
