--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -25,6 +25,10 @@
       opacity: 1;
       display: flex;
     }
+
+    @include phone {
+      border-radius: unset;
+    }
   }
 
   &__item {
@@ -79,13 +83,15 @@
 
     &__dropdown {
       display: block;
+      @include fontSize(16);
       position: absolute;
       width: 70%;
       right: -10px;
       top: -10px;
       max-width: calc(100% - 20px);
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      border-radius: 30px;
+      overflow: hidden;
+      border-radius: 20px;
     }
 
     &__list {
@@ -110,5 +116,9 @@
         display: block;
       }
     }
+  }
+
+  @include phone {
+    display: none;
   }
 }
