--- a/styles/style.css
+++ b/styles/style.css
@@ -598,6 +598,12 @@ body {
   display: flex;
 }
 
+@media only screen and (max-width: 450px) {
+  .nav__list {
+    border-radius: unset;
+  }
+}
+
 .nav__item a {
   text-transform: capitalize;
   padding: 10px;
@@ -647,6 +653,7 @@ body {
   }
   .nav__dropdown {
     display: block;
+    font-size: 1.6rem;
     position: absolute;
     width: 70%;
     right: -10px;
@@ -654,7 +661,8 @@ body {
     max-width: calc(100% - 20px);
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    border-radius: 30px;
+    overflow: hidden;
+    border-radius: 20px;
   }
   .nav__list {
     padding: 70px 0 20px;
@@ -675,6 +683,12 @@ body {
   }
   .nav__item:last-child {
     display: block;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .nav {
+    display: none;
   }
 }
 
@@ -921,7 +935,7 @@ body {
   font-weight: bold;
   font-size: 4rem;
   font-family: "Poppins", sans-serif;
-  z-index: 10;
+  z-index: 1;
   color: #000000;
 }
 
@@ -1914,4 +1928,195 @@ footer .copyright--2 {
 .btn__menu.nav-close .inner::after {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+.nav-mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 450px) {
+  .nav-mobile {
+    display: block;
+    position: relative;
+  }
+}
+
+.nav-mobile .svg {
+  height: 0;
+}
+
+.menu {
+  -webkit-filter: url("#shadowed-goo");
+          filter: url("#shadowed-goo");
+  position: absolute;
+  top: 20px;
+  right: 0;
+  z-index: 10;
+}
+
+.menu a i {
+  font-size: 1.8rem;
+}
+
+.menu-item,
+.menu-open-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  background: #556373;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  top: 0;
+  right: -20px;
+  color: white;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  -webkit-transition: -webkit-transform ease-out 200ms;
+  transition: -webkit-transform ease-out 200ms;
+  transition: transform ease-out 200ms;
+  transition: transform ease-out 200ms, -webkit-transform ease-out 200ms;
+}
+
+.menu-open {
+  display: none;
+}
+
+.hamburger {
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 3px;
+  background: white;
+  border-radius: 10px;
+  -webkit-transition: -webkit-transform 200ms;
+  transition: -webkit-transform 200ms;
+  transition: transform 200ms;
+  transition: transform 200ms, -webkit-transform 200ms;
+}
+
+.hamburger-1 {
+  -webkit-transform: translate3d(0, -8px, 0);
+          transform: translate3d(0, -8px, 0);
+}
+
+.hamburger-2 {
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+
+.hamburger-3 {
+  -webkit-transform: translate3d(0, 8px, 0);
+          transform: translate3d(0, 8px, 0);
+}
+
+.menu-open:checked + .menu-open-button .hamburger-1 {
+  -webkit-transform: translate3d(0, 0, 0) rotate(45deg);
+          transform: translate3d(0, 0, 0) rotate(45deg);
+}
+
+.menu-open:checked + .menu-open-button .hamburger-2 {
+  -webkit-transform: translate3d(0, 0, 0) scale(0.1, 1);
+          transform: translate3d(0, 0, 0) scale(0.1, 1);
+}
+
+.menu-open:checked + .menu-open-button .hamburger-3 {
+  -webkit-transform: translate3d(0, 0, 0) rotate(-45deg);
+          transform: translate3d(0, 0, 0) rotate(-45deg);
+}
+
+.menu {
+  position: fixed;
+  right: 40px;
+  bottom: 55px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 20px;
+  text-align: left;
+}
+
+.menu-item:hover {
+  background: #ffffff;
+  color: #00bcd4;
+}
+
+.menu-item:nth-child(3) {
+  -webkit-transition-duration: 180ms;
+          transition-duration: 180ms;
+}
+
+.menu-item:nth-child(4) {
+  -webkit-transition-duration: 180ms;
+          transition-duration: 180ms;
+}
+
+.menu-item:nth-child(5) {
+  -webkit-transition-duration: 180ms;
+          transition-duration: 180ms;
+}
+
+.menu-item:nth-child(6) {
+  -webkit-transition-duration: 180ms;
+          transition-duration: 180ms;
+}
+
+.menu-open-button {
+  z-index: 2;
+  -webkit-transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  cursor: pointer;
+}
+
+.menu-open-button:hover {
+  -webkit-transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+          transform: scale(1.1, 1.1) translate3d(0, 0, 0);
+}
+
+.menu-open:checked + .menu-open-button {
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  -webkit-transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+          transform: scale(0.8, 0.8) translate3d(0, 0, 0);
+}
+
+.menu-open:checked ~ .menu-item {
+  -webkit-transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+          transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.menu-open:checked ~ .menu-item:nth-child(3) {
+  -webkit-transition-duration: 190ms;
+          transition-duration: 190ms;
+  -webkit-transform: translate3d(0, 80px, 0);
+          transform: translate3d(0, 80px, 0);
+}
+
+.menu-open:checked ~ .menu-item:nth-child(4) {
+  -webkit-transition-duration: 290ms;
+          transition-duration: 290ms;
+  -webkit-transform: translate3d(0, 155px, 0);
+          transform: translate3d(0, 155px, 0);
+}
+
+.menu-open:checked ~ .menu-item:nth-child(5) {
+  -webkit-transition-duration: 390ms;
+          transition-duration: 390ms;
+  -webkit-transform: translate3d(0, 230px, 0);
+          transform: translate3d(0, 230px, 0);
+}
+
+.menu-open:checked ~ .menu-item:nth-child(6) {
+  -webkit-transition-duration: 490ms;
+          transition-duration: 490ms;
+  -webkit-transform: translate3d(0, 305px, 0);
+          transform: translate3d(0, 305px, 0);
 }
