--- a/styles/sass/components/_gooey.scss
+++ b/styles/sass/components/_gooey.scss
@@ -28,6 +28,7 @@
   @include centerFlex();
   position: absolute;
   background: rgb(85, 99, 115);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
   width: 50px;
   height: 50px;
