--- a/styles/style.css
+++ b/styles/style.css
@@ -1971,6 +1971,8 @@ footer .copyright--2 {
           align-items: center;
   position: absolute;
   background: #556373;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 50%;
   width: 50px;
   height: 50px;
